message StreamFileRequest {
  string cid = 1;
  // Optional chunk size in bytes. If not specified, server will use default (128KB)
  uint32 chunk_size = 2;
}

message StreamFileResponse {
  bytes data = 1;
  string content_type = 2;
  string filename = 3;
  // Optional transaction info
  string tx_hash = 4;
  bool is_tx_update = 5;  // Flag to indicate this is a transaction update
} 
